# STARFiSh

./: .gitignore  .realtimeWrite0.viz  LOGcurrentWaveSpeed.txt  LOGproposedGrid.txt  README.md  STARFiSh.config  Simulator.py  Visualisation.py  macdeps.sh  patch_worker.py  patch_worker_start.py  requirements.txt  solver.py  vnc.py
NetlistEditor/: LINUX_STANDALONE_BUILD.md  run_CRIMSONBCT.sh
NetlistEditor/build-linux/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake
NetlistEditor/build-linux/src/: Makefile  cmake_install.cmake  qrc_CRIMSONBCT.cpp
NetlistEditor/build-linux/src/CRIMSONBCT_autogen/: deps  moc_predefs.h
NetlistEditor/build-linux/src/CRIMSONBCT_autogen/4Z5BQAJX5Y/: moc_workplane.cpp  moc_workplane.cpp.d
NetlistEditor/build-linux/src/CRIMSONBCT_autogen/AFG7A4Z2OC/: moc_configdialog.cpp  moc_configdialog.cpp.d  moc_configpage.cpp  moc_configpage.cpp.d
NetlistEditor/build-linux/src/CRIMSONBCT_autogen/DMHXEJ42XS/: moc_delegate.cpp  moc_delegate.cpp.d  moc_extendedmdiarea.cpp  moc_extendedmdiarea.cpp.d  moc_qlogger.cpp  moc_qlogger.cpp.d  moc_qsapecngwindow.cpp  moc_qsapecngwindow.cpp.d  moc_sidebarmodel.cpp  moc_sidebarmodel.cpp.d  moc_sidebarview.cpp  moc_sidebarview.cpp.d
NetlistEditor/build-linux/src/CRIMSONBCT_autogen/EIG7H3VRQM/: moc_qtpropertybrowserutils_p.cpp  moc_qtpropertybrowserutils_p.cpp.d
NetlistEditor/build-linux/src/CRIMSONBCT_autogen/K3C2EOTHGS/: moc_metacircuit_thread.cpp  moc_metacircuit_thread.cpp.d  moc_propertytextitem.cpp  moc_propertytextitem.cpp.d  moc_schematiceditor.cpp  moc_schematiceditor.cpp.d  moc_schematicscene.cpp  moc_schematicscene.cpp.d  moc_schematicview.cpp  moc_schematicview.cpp.d
NetlistEditor/build-linux/src/CRIMSONBCT_autogen/include/: moc_qtbuttonpropertybrowser.cpp  moc_qtbuttonpropertybrowser.cpp.d  moc_qteditorfactory.cpp  moc_qteditorfactory.cpp.d  moc_qtgroupboxpropertybrowser.cpp  moc_qtgroupboxpropertybrowser.cpp.d  moc_qtpropertybrowser.cpp  moc_qtpropertybrowser.cpp.d  moc_qtpropertymanager.cpp  moc_qtpropertymanager.cpp.d  moc_qttreepropertybrowser.cpp  moc_qttreepropertybrowser.cpp.d  moc_qtvariantproperty.cpp  moc_qtvariantproperty.cpp.d  qteditorfactory.moc.d  qtpropertymanager.moc.d  qttreepropertybrowser.moc.d
NetlistEditor/build-qt6-linux/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake
NetlistEditor/build-qt6-linux-starfish/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake
NetlistEditor/build-qt6-linux-starfish/.qt/: QtDeploySupport.cmake
NetlistEditor/build-qt6-linux-starfish/src/: Makefile  cmake_install.cmake  qrc_CRIMSONBCT.cpp
NetlistEditor/build-qt6-linux-starfish/src/CRIMSONBCT_autogen/: deps  mocs_compilation.cpp
NetlistEditor/build-qt6-linux-starfish/src/CRIMSONBCT_autogen/4Z5BQAJX5Y/: moc_workplane.cpp  moc_workplane.cpp.d
NetlistEditor/build-qt6-linux-starfish/src/CRIMSONBCT_autogen/AFG7A4Z2OC/: moc_configdialog.cpp  moc_configdialog.cpp.d  moc_configpage.cpp.d
NetlistEditor/build-qt6-linux-starfish/src/CRIMSONBCT_autogen/DMHXEJ42XS/: moc_delegate.cpp  moc_delegate.cpp.d  moc_extendedmdiarea.cpp.d  moc_qlogger.cpp.d  moc_qsapecngwindow.cpp  moc_qsapecngwindow.cpp.d  moc_sidebarmodel.cpp  moc_sidebarmodel.cpp.d  moc_sidebarview.cpp  moc_sidebarview.cpp.d
NetlistEditor/build-qt6-linux/.qt/: QtDeploySupport.cmake
NetlistEditor/build-qt6-linux/src/: Makefile  cmake_install.cmake  config.h  qrc_CRIMSONBCT.cpp
NetlistEditor/build-qt6-linux/src/CRIMSONBCT_autogen/: deps  moc_predefs.h
NetlistEditor/cmake/Modules/: FindQwt.cmake
NetlistEditor/src/: CMakeLists.txt
NetlistEditor/src/gui/: CRIMSONBCT.cpp  qlogger.h  qsapecngwindow.cpp  sidebarmodel.cpp
NetlistEditor/src/gui/configdialog/: configpage.cpp
NetlistEditor/src/gui/editor/: graphicsnode.cpp  label.cpp  propertytextitem.hpp  schematiceditor.h  schematicscene.cpp  schematicscene.h  undoredocommand.cpp
NetlistEditor/src/gui/workplane/: workplane.cpp
NetworkLib/: classBoundaryConditions.py  classVascularNetwork.py  classVessel.py  netlistInterface.py  netlistManager.py
Slicer/: inspect_vmtk.py  install_slicer_linux.sh
SolverLib/: class1DflowSolver.py  classConnections.py  classFields.py
TemplateNetworks/adan56_benchmark2015_template/: adan56_benchmark2015_template.xml
TemplateNetworks/singleBifurcation/: singleBifurcation.xml
UtilityLib/: classStarfishBaseObject.py  constants.py  crimsonNetlistAdapter.py  crimsonNetlistWorkerClient.py  moduleCSV.py  moduleFilePathHandler.py  moduleHelperFunctions.py  moduleStartUp.py  moduleXML.py  netlistSurfaceBuilder.py  networkXml043.py  processing.py
VascularPolynomialChaosLib/: classRandomInput.py
VisualisationLib/: class2dVisualisation.py  class3dControlGUI.py  class3dLUT.py  class3dVisualisation.py  classRealTimeVisualisation.py
VncLib/: xdot.py
docs/: installation_guide.md  netlist_1d_coupling_plan.md
ext/: CMakeLists.txt  CrimsonControlSystems.cpp  CrimsonControlSystems.hxx  CrimsonNetlistRuntime.cpp  CrimsonNetlistRuntime.hxx  CrimsonNetlistWorker.cpp  CrimsonPythonRuntime.cpp  CrimsonPythonRuntime.hxx  StarfishBridge.cpp  Venous Blended.brep.vtp  bindings.cpp  build.txt  extract_vessel_data.py  verify_bridge.py
ext/tests/: CMakeLists.txt  CrimsonControlSystemsCheck.cpp  CrimsonControllerCheck.cpp  CrimsonNetlistAdapterWorkerCheck.py  CrimsonNetlistControlledRuntimeCheck.cpp  CrimsonNetlistRuntimeCheck.cpp  CrimsonNetlistWorkerProtocolCheck.py  CrimsonPythonRuntimeCheck.cpp  useful_commands_for_running_tests.txt
ext/tests/controllers/: constantResistanceController.py  netlist_surfaces.xml
ext/tests/passive/: netlist_surfaces.xml
slicer/starfishvncui/: StarfishVNCUI.py
vnc_ui/: edge_focused_ui.py  editor.py  panels.py  qt_compat.py  scene.py  scene_items.py  scratch_solver.py  slicer_centerline_ui.py  slicer_macro.py  slicer_panel.py  visualization_qt.py  vnc_ui_main.py  widgets.py
(+63 files in other folders)
